--- a/package.json
+++ b/package.json
@@ -9,17 +9,25 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "clsx": "^2.0.0",
+    "framer-motion": "^10.16.4",
+    "next": "13.5.5",
     "react": "^18",
+    "react-countup": "^6.5.0",
     "react-dom": "^18",
-    "next": "13.5.5"
+    "react-tsparticles": "^2.12.2",
+    "swiper": "^10.3.1",
+    "tailwind-merge": "^2.0.0",
+    "tailwind-scrollbar": "^3.0.5",
+    "tsparticles": "^2.12.0"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10",
     "postcss": "^8",
-    "tailwindcss": "^3"
+    "tailwindcss": "^3",
+    "typescript": "^5"
   }
 }
